--- a/squirrel.yaml
+++ b/squirrel.yaml
@@ -27,8 +27,10 @@ show_notifications_when: appropriate
 # ascii_mode、inline、no_inline、vim_mode 等等设定
 # 可参考 /Library/Input Methods/Squirrel.app/Contents/SharedSupport/squirrel.yaml
 app_options:
-  # com.apple.Spotlight:
-  #   ascii_mode: true    # 开启默认英文
+  com.neovide.neovide:
+    ascii_mode: true    # 开启默认英文
+  com.mitchellh.ghostty:
+    ascii_mode: true
   # com.microsoft.VSCode:
   #   ascii_mode: false   # 关闭默认英文
 
