--- a/default.yaml
+++ b/default.yaml
@@ -211,7 +211,7 @@ key_binder:
     # - { when: composing, accept: Control+e, send: End }
     # - { when: composing, accept: Control+d, send: Delete }
     # - { when: composing, accept: Control+k, send: Shift+Delete }
-    # - { when: composing, accept: Control+h, send: BackSpace }
+    - { when: composing, accept: Control+h, send: BackSpace }
     # - { when: composing, accept: Control+g, send: Escape }
     # - { when: composing, accept: Control+bracketleft, send: Escape }
     # - { when: composing, accept: Control+y, send: Page_Up }
